--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": ">=14.17.0"
+  },
   "scripts": {
     "build": "unbuild",
     "dev": "unbuild --stub",
@@ -31,20 +34,22 @@
     "lint:fix": "eslint --fix .",
     "test": "vitest run",
     "test:watch": "vitest",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "up": "taze -I"
   },
   "dependencies": {
-    "ethers": "^6.13.4"
+    "ethers": "^6.13.5",
+    "valibot": "^1.0.0-beta.10"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.12.1",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
+    "taze": "^0.18.0",
     "typescript": "^5.7.2",
     "unbuild": "^3.2.0",
-    "uuid": "^11.0.3",
-    "vite": "^5.4.11",
+    "vite": "^6.0.7",
     "vitest": "^2.1.8"
   }
 }
