feat: enhance schema validation and add new utility functions for agent management

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ PRIVATE_KEY=
 AGENT_ADDRESS=
 CONFIG_DIGEST=
 SIGNERS= # comma separated list of signers
+SIGNER_PRIVATE_KEYS= # comma separated list of private keys
