--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-agent-sdk-nodejs",
+  "name": "ai-agent-sdk-js",
   "type": "module",
   "version": "0.0.1",
   "sideEffects": false,
