refactor: update type imports and remove unused types from schema

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,9 @@
     "esModuleInterop": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
