--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-agent-sdk-js",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "Apache-2.0",
   "sideEffects": false,
   "exports": {
@@ -36,7 +36,8 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "typecheck": "tsc --noEmit",
-    "up": "taze -I"
+    "up": "taze -I",
+    "release": "bumpp"
   },
   "dependencies": {
     "ethers": "^6.13.5",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.16.0",
     "@types/node": "^22.10.7",
+    "bumpp": "^9.10.2",
     "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "taze": "^18.3.0",
