--- a/package.json
+++ b/package.json
@@ -41,17 +41,17 @@
   },
   "dependencies": {
     "ethers": "^6.13.5",
-    "valibot": "^1.0.0-beta.15"
+    "valibot": "^1.0.0-rc.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.1.1",
-    "@types/node": "^22.13.1",
-    "bumpp": "^10.0.1",
-    "eslint": "^9.19.0",
-    "taze": "^18.4.0",
+    "@antfu/eslint-config": "^4.2.0",
+    "@types/node": "^22.13.4",
+    "bumpp": "^10.0.3",
+    "eslint": "^9.20.1",
+    "taze": "^18.5.0",
     "typescript": "^5.7.3",
     "unbuild": "^3.3.1",
-    "vite": "^6.0.11",
+    "vite": "^6.1.0",
     "vitest": "^3.0.5"
   }
 }
