--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ai-agent-sdk-js",
+  "name": "attps-sdk-js",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "license": "Apache-2.0",
   "sideEffects": false,
   "exports": {
