--- a/package.json
+++ b/package.json
@@ -40,18 +40,21 @@
     "release": "bumpp"
   },
   "dependencies": {
+    "bn.js": "^5.2.1",
+    "elliptic": "^6.6.1",
     "ethers": "^6.13.5",
     "valibot": "^1.0.0-rc.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.2.1",
+    "@antfu/eslint-config": "^4.3.0",
+    "@types/elliptic": "^6.4.18",
     "@types/node": "^22.13.4",
     "bumpp": "^10.0.3",
     "eslint": "^9.20.1",
-    "taze": "^18.5.0",
+    "taze": "^18.6.0",
     "typescript": "^5.7.3",
     "unbuild": "^3.3.1",
-    "vite": "^6.1.0",
-    "vitest": "^3.0.5"
+    "vite": "^6.1.1",
+    "vitest": "^3.0.6"
   }
 }
