--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/node": "^22.13.4",
     "bumpp": "^10.0.3",
     "eslint": "^9.20.1",
+    "msw": "^2.7.1",
     "taze": "^18.6.0",
     "typescript": "^5.7.3",
     "unbuild": "^3.3.1",
