--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "type": "module",
   "version": "0.1.0",
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/APRO-com/ATTPs-sdk-js"
+  },
   "sideEffects": false,
   "exports": {
     ".": {
