chore: add keywords to package.json for better npm discoverability

--- a/package.json
+++ b/package.json
@@ -7,6 +7,17 @@
     "type": "git",
     "url": "https://github.com/APRO-com/ATTPs-sdk-js"
   },
+  "keywords": [
+    "ATTPs",
+    "SDK",
+    "blockchain",
+    "cryptocurrency",
+    "Web3",
+    "Ethereum",
+    "smart-contracts",
+    "JavaScript",
+    "TypeScript"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
